# pytest-hardware-test-report

./: LICENSE  README.md  pyproject.toml  sample_report.json  tox.ini
.github/workflows/: main.yml  publish.yml
pytest_htr/: plugin.py  serialize.py
tests/: conftest.py  test_output.py  test_pytest_htr.py
