[tool.poetry]
name = "pytest-hardware-test-report"
version = "0.2.0"
description = "A simple plugin to use with pytest"
authors = [
    "Matthew Trott <trottmpq@gmail.com>"
]
maintainers = [
    "Matthew Trott <trottmpq@gmail.com>"
]
readme = "README.md"
license = "MIT"
packages = [
    {include = "pytest_htr"}
]
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.8.1"
pytest = "^8.0.0"
pytest-metadata = "^3.1.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
pylint = "^3.0.3"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-xdist = "^3.5.0"
flaky = "^3.8.1"

[tool.poetry.plugins.pytest11]
hardware-test-report = "pytest_htr.plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
